--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# pictures
+bacteria.jpg
+
+# pictures
+belly_button_bacteria.jpg
+
+# pictures
+bellybutton1.jpg
+
+# pictures
+belly_button_bacteria2.jpg
+
+# pictures
+belly_button_bacteria3.jpg
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
